# api/openapi/swagger.yaml
@@ -1755,12 +1755,7 @@ paths:
         "200":
           description: 请求成功
           schema:
-            allOf:
-            - $ref: '#/definitions/response.successResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/handler.RoleResponse'
-              type: object
+            $ref: '#/definitions/response.successResponse'
         "400":
           description: 参数错误
           schema:
@@ -1825,12 +1820,7 @@ paths:
         "200":
           description: 请求成功
           schema:
-            allOf:
-            - $ref: '#/definitions/response.successResponse'
-            - properties:
-                data:
-                  $ref: '#/definitions/handler.RoleResponse'
-              type: object
+            $ref: '#/definitions/response.successResponse'
         "400":
           description: 参数错误
           schema:
